# Sparse-Attention

./: .gitignore  CMakeLists.txt  README.md  conftest.py  pyproject.toml
benchmarks/: bench_oom_boundary.py  bench_sparse_decode.py  bench_sparse_prefill.py  bench_vs_dense.py  plot_results.py
docs/: scaling_analysis.md  sm_utilization.md  sparse_patterns.md  vllm_integration.md
include/: block_pattern.cuh  chunked_kv.cuh  sparse_attn.cuh
notebooks/: PROJECT_04_Demo.ipynb
sparse_attn/: __init__.py
sparse_attn/kernels/: __init__.py  pattern_compiler.py  sparse_decode.py  sparse_prefill.py
sparse_attn/patterns/: __init__.py  base.py  custom.py  heterogeneous.py  local_window.py  strided.py
sparse_attn/vllm/: __init__.py  patch_model.py  sparse_attn_backend.py
tests/: test_causal_correctness.py  test_oom_free.py  test_pattern_correctness.py  test_vllm_integration.py
