[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sparse-attn"
version = "0.1.0"
description = "Custom Sparse Attention Kernels for Infinite Context Windows"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Paramveersingh-S", email = "paramveer@example.com"}
]
keywords = ["sparse attention", "LLM", "CUDA", "Triton", "long context", "transformer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.1.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
triton = [
    "triton>=2.1.0",
]
vllm = [
    "vllm>=0.4.0",
    "transformers>=4.38.0",
]
dev = [
    "pytest>=7.0",
    "pytest-xdist",
    "black",
    "isort",
    "mypy",
]
all = [
    "triton>=2.1.0",
    "vllm>=0.4.0",
    "transformers>=4.38.0",
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/Paramveersingh-S/Sparse-Attention"
Repository = "https://github.com/Paramveersingh-S/Sparse-Attention"
Issues = "https://github.com/Paramveersingh-S/Sparse-Attention/issues"

[tool.setuptools.packages.find]
include = ["sparse_attn*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
